corrected horizontal scroll

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -2,16 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 984px;
+  max-width: 100%;
 }
-@media screen and (max-width: 1279px) {
+@media screen and (min-width: 1280px) {
   .content {
-    max-width: 928px;
-  }
-}
-@media screen and (max-width: 928px) {
-  .content {
-    min-width: 320px;
-    max-width: 100%;
+    max-width: 984px;
   }
 }
