--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -8,8 +8,8 @@
   background-size: cover;
   background-position: center;
   text-decoration: none;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  min-height: 100%;
   z-index: 0;
 }
 .cover__overlay:before {
