--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,24 +2,24 @@
   margin-top: 66px;
   width: 320px;
   height: 200px;
+  margin-left: 0;
+  margin-right: 0;
 }
 @media screen and (min-width: 768px) {
   .cover {
     margin-top: 90px;
-    width: 768px;
-    height: 480px;
+    min-width: 100%;
+    min-height: 480px;
   }
 }
 @media screen and (min-width: 1024px) {
   .cover {
     margin-top: 92px;
-    width: 1024px;
-    height: 640px;
+    min-height: 640px;
   }
 }
 @media screen and (min-width: 1280px) {
   .cover {
-    width: 1184px;
-    height: 740px;
+    min-height: 740px;
   }
 }
