--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,15 +8,16 @@
   color: #ffffff;
   margin-top: 8px;
   margin-bottom: 0;
+  margin-left: 16px;
   align-self: flex-start;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .lead__caption {
     margin-left: 24px;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 1024px) {
   .lead__caption {
-    margin-left: 16px;
+    margin-left: 0;
   }
 }
