--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,14 +1,4 @@
 .lead__image {
-  max-width: 984px;
-}
-@media screen and (max-width: 1279px) {
-  .lead__image {
-    max-width: 928px;
-  }
-}
-@media screen and (max-width: 928px) {
-  .lead__image {
-    min-width: 320px;
-    max-width: 100%;
-  }
+  min-width: 320px;
+  max-width: 100%;
 }
