--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,24 +1,26 @@
 .lead__title {
   font-style: normal;
   font-weight: 900;
-  font-size: 96px;
-  line-height: 100px;
+  font-size: 40px;
+  line-height: 110%;
   text-align: center;
   color: #ffffff;
-  max-width: 720px;
-  max-height: 200px;
-  margin-bottom: 32px;
+  max-width: 288px;
+  max-height: 88px;
+  margin-bottom: 16px;
   margin-top: 48px;
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 768px) {
   .lead__title {
-    margin-top: 56px;
+    font-size: 96px;
+    line-height: 104%;
+    max-width: 720px;
+    max-height: 200px;
+    margin-bottom: 32px;
   }
 }
-@media screen and (max-width: 719px) {
+@media screen and (max-width: 768px) {
   .lead__title {
-    font-size: 40px;
-    line-height: 44px;
-    margin-bottom: 16px;
+    margin-top: 56px;
   }
 }
