--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,4 +3,15 @@
   flex-direction: column;
   align-items: center;
   margin: 0;
+  max-width: 100%;
+}
+@media screen and (min-width: 928px) {
+  .lead {
+    max-width: 928px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .lead {
+    max-width: 984px;
+  }
 }
