--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,5 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  max-width: 320px;
+}
+@media screen and (min-width: 768px) {
+  .places {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .places {
+    max-width: 928px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .places {
+    max-width: 984px;
+  }
 }
